@@ -30,4 +30,5 @@ GitlabCi::Application.configure do
   config.active_support.deprecation = :stderr
 
   config.eager_load = false
+  config.cache_store = :null_store
 end
