@@ -11,6 +11,12 @@ describe "Runners" do
       @project2 = FactoryGirl.create :project
       stub_js_gitlab_calls
 
+      # all projects should be authorized for user
+      Network.any_instance.stub(:projects).and_return([
+        OpenStruct.new({id: @project.gitlab_id}),
+        OpenStruct.new({id: @project2.gitlab_id})
+      ])
+
       @shared_runner = FactoryGirl.create :shared_runner
       @specific_runner = FactoryGirl.create :specific_runner
       @specific_runner2 = FactoryGirl.create :specific_runner
