@@ -9,6 +9,7 @@ v7.12.0
   - Ability to set secret variables for runner
   - Dont retry build when push same commit in same ref twice 
   - Admin area: show amount of runners with last contact less than a minute ago
+  - Fix re-adding project with the same name but different gitlab_id
 
 v7.11.0
   - Deploy Jobs API calls
